@@ -9,5 +9,6 @@ val g : unit -> int = <fun>
 Exception: Not_found.
 Raised at f in file "//toplevel//", line 2, characters 11-26
 Called from g in file "//toplevel//", line 1, characters 11-15
-Called from Topeval.load_lambda in file "toplevel/byte/topeval.ml", line 95, characters 4-14
+Called from <unknown> in file "//toplevel//", line 1, characters 0-4
+Called from Topeval.load_lambda in file "toplevel/byte/topeval.ml", line 93, characters 4-14
 
